# personal-assistent

./: .gitignore  main.py  pyproject.toml  testing.py
.kiro/steering/: product.md  structure.md  tech.md
agents/AgentX/: AgentX.py
agents/cpu_agent/: get_cpu_agent.py
agents/cpu_agent/prompt/: get_cpu_agent_prompt.py
agents/cpu_agent/tools/: execute_cmd.py  execute_command_tool.py  execute_powershell.py
agents/task_planner_agent/: get_task_planner_agent.py
agents/task_planner_agent/prompt/: get_task_planner_prompt.py
agents_workflows/: __init__.py  self_reflect_agent_workflow.py
agents_workflows/self_reflect_agent/: __init__.py  get_self_reflect_agent.py
agents_workflows/self_reflect_agent/prompt/: __init__.py  get_self_reflect_prompt.py
global_tools/: exit_loop_tool.py
ui/: agent_response.py
utils/llm/: call_agent_async.py
